--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,8 +85,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         if: ${{ matrix.region != 'cn-north-1' &&  matrix.region != 'cn-northwest-1'}}
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
           mask-aws-account-id: false
           aws-region: ${{matrix.region}}
 
@@ -137,97 +137,103 @@ jobs:
           path: ${{ github.event.inputs.toLayer }}/${{matrix.region}}
           retention-days: 1
 
-#  smoke-test:
-#    needs: publish-layer
-#    runs-on: ubuntu-latest
-#
-#    strategy:
-#      matrix:
-#        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
-#
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v2
-#
-#      - name: Checkout submodules
-#        run: |
-#          git submodule update --init --recursive
-#          cd opentelemetry-lambda
-#          git fetch
-#          git merge origin/master
-#
-#      - name: adot custom
-#        run: |
-#          cp -rf adot/* opentelemetry-lambda/
-#
-#      # set aws creds for CN regions and standard regions
-#      - name: Configure AWS Credentials CN
-#        uses: aws-actions/configure-aws-credentials@v1
-#        if: ${{ matrix.region == 'cn-north-1' ||  matrix.region == 'cn-northwest-1'}}
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST_CN }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST_CN }}
-#          mask-aws-account-id: false
-#          aws-region: ${{matrix.region}}
-#      - name: Configure AWS Credentials standard
-#        uses: aws-actions/configure-aws-credentials@v1
-#        if: ${{ matrix.region != 'cn-north-1' &&  matrix.region != 'cn-northwest-1'}}
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST }}
-#          mask-aws-account-id: false
-#          aws-region: ${{matrix.region}}
-#
-#      - name: Get git commit sha
-#        run: |
-#          echo "ADOT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-#          cd opentelemetry-lambda
-#          echo "OTEL_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-#
-#      - name: Set layer name
-#        run: |
-#          echo "OTEL_LAMBDA_LAYER=${{ github.event.inputs.toLayer }}" >> $GITHUB_ENV
-#
-#      - name: Checkout test framework
-#        uses: actions/checkout@v2
-#        if: ${{ success() }}
-#        with:
-#          repository: aws-observability/aws-otel-test-framework
-#          path: test-framework
-#
-#      - name: Set sample stack name
-#        run: |
-#          echo "OTEL_LAMBDA_STACK=$STACK-$OTEL_SHA-$ADOT_SHA" >> $GITHUB_ENV
-#
-#      - name: deploy sample
-#        continue-on-error: true
-#        working-directory: opentelemetry-lambda/python/sample-python
-#        run: |
-#          echo $OTEL_LAMBDA_STACK
-#          ./run.sh
-#
-#      - name: validate sample
-#        run: |
-#          echo "TODO"
-#
-#      - name: install otel layer to sample
-#        run: |
-#          layerArn=$(${{ env.UTILS }}/layer.sh -a)
-#          echo $layerArn
-#          ${{ env.UTILS }}/update.sh -l $layerArn
-#          ${{ env.UTILS }}/update.sh -e "Variables={OPENTELEMETRY_COLLECTOR_CONFIG_FILE=/opt/collector-config/config.yaml,AWS_LAMBDA_EXEC_WRAPPER=/opt/python/otel-instrument}"
-#
-#      - name: validate layer
-#        run: |
-#          endpoint=$(${{ env.UTILS }}/endpoint.sh)
-#          curl $endpoint
-#          cp opentelemetry-lambda/python/sample-python/test/expected.mustache test-framework/validator/src/main/resources/expected-data-template/lambdaExpectedTrace.mustache
-#          cd test-framework
-#          ./gradlew :validator:run  --args="-c default-lambda-validation.yml --endpoint $endpoint --region $AWS_REGION"
-#
-#      - name: clean sample
-#        run: |
-#          ${{ env.UTILS }}/clean.sh
+  smoke-test:
+    needs: publish-layer
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Checkout submodules
+        run: |
+          git submodule update --init --recursive
+          cd opentelemetry-lambda
+          git fetch
+          git merge origin/master
+
+      - name: adot custom
+        run: |
+          cp -rf adot/* opentelemetry-lambda/
+
+      # set aws creds for CN regions and standard regions
+      - name: Configure AWS Credentials CN
+        uses: aws-actions/configure-aws-credentials@v1
+        if: ${{ matrix.region == 'cn-north-1' ||  matrix.region == 'cn-northwest-1'}}
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST_CN }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST_CN }}
+          mask-aws-account-id: false
+          aws-region: ${{matrix.region}}
+      - name: Configure AWS Credentials standard
+        uses: aws-actions/configure-aws-credentials@v1
+        if: ${{ matrix.region != 'cn-north-1' &&  matrix.region != 'cn-northwest-1'}}
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST }}
+          mask-aws-account-id: false
+          aws-region: ${{matrix.region}}
+
+      - name: Get git commit sha
+        run: |
+          echo "ADOT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          cd opentelemetry-lambda
+          echo "OTEL_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
+      - name: Set layer name
+        run: |
+          echo "OTEL_LAMBDA_LAYER=${{ github.event.inputs.toLayer }}" >> $GITHUB_ENV
+
+      - name: Checkout test framework
+        uses: actions/checkout@v2
+        if: ${{ success() }}
+        with:
+          repository: aws-observability/aws-otel-test-framework
+          path: test-framework
+
+      - name: Set sample stack name
+        run: |
+          echo "OTEL_LAMBDA_STACK=$STACK-$OTEL_SHA-$ADOT_SHA" >> $GITHUB_ENV
+
+      - name: deploy sample
+        continue-on-error: true
+        working-directory: opentelemetry-lambda/python/sample-python
+        run: |
+          echo $OTEL_LAMBDA_STACK
+          ./run.sh
+
+      - name: validate sample
+        run: |
+          echo "TODO"
+
+      - name: download layerARNs
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ github.event.inputs.toLayer }}
+          path: ${{ github.event.inputs.toLayer }}
+
+      - name: install otel layer to sample
+        run: |
+          layerArn=$(cat ${{ github.event.inputs.toLayer }}/$AWS_REGION)
+          echo $layerArn
+          ${{ env.UTILS }}/update.sh -l $layerArn
+          ${{ env.UTILS }}/update.sh -e "Variables={OPENTELEMETRY_COLLECTOR_CONFIG_FILE=/opt/collector-config/config.yaml,AWS_LAMBDA_EXEC_WRAPPER=/opt/python/otel-instrument}"
+
+      - name: validate layer
+        run: |
+          endpoint=$(${{ env.UTILS }}/endpoint.sh)
+          curl $endpoint
+          cp opentelemetry-lambda/python/sample-python/test/expected.mustache test-framework/validator/src/main/resources/expected-data-template/lambdaExpectedTrace.mustache
+          cd test-framework
+          ./gradlew :validator:run  --args="-c default-lambda-validation.yml --endpoint $endpoint --region $AWS_REGION"
+
+      - name: clean sample
+        run: |
+          ${{ env.UTILS }}/clean.sh
 
   release-to-github:
     runs-on: ubuntu-latest
@@ -268,9 +274,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ github.event.inputs.version }}
           commitish: ${{ github.sha }}
-          release_name: Release ${{ github.ref }}
+          release_name: Release ADOT Lambda layer for Python 3.8
           body_path: release-note
           draft: true
           prerelease: true
