--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -237,8 +237,8 @@ jobs:
 
   release-to-github:
     runs-on: ubuntu-latest
-#    needs: [ smoke-test ]
-    needs: publish-layer
+    needs: [ smoke-test ]
+#    needs: publish-layer
     steps:
       - name: download layerARNs
         uses: actions/download-artifact@v2
