--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,10 @@ on:
         description: 'Layer name publishing to Prod account'
         required: true
         default: 'py38-preview'
+      version:
+        description: 'the version number to release'
+        required: true
+        default: '0.1'
 
 
 jobs:
@@ -102,15 +106,15 @@ jobs:
         run: |
           exit 1
 
-      - name: clone
-        run: |
-          BUCKET_NAME="lambda-artifacts"-$(dd if=/dev/random bs=8 count=1 2>/dev/null | od -An -tx1 | tr -d ' \t\n')
-          aws s3 mb s3://$BUCKET_NAME
-          aws s3 cp layer.zip s3://$BUCKET_NAME
-          toLayerArn=$(aws lambda publish-layer-version --layer-name ${{ github.event.inputs.toLayer }} --content S3Bucket=$BUCKET_NAME,S3Key=layer.zip --query 'LayerVersionArn' --output text)
-          aws s3 rm s3://$BUCKET_NAME/layer.zip
-          aws s3 rb s3://$BUCKET_NAME
-          echo $toLayerArn
+#      - name: clone
+#        run: |
+#          BUCKET_NAME="lambda-artifacts"-$(dd if=/dev/random bs=8 count=1 2>/dev/null | od -An -tx1 | tr -d ' \t\n')
+#          aws s3 mb s3://$BUCKET_NAME
+#          aws s3 cp layer.zip s3://$BUCKET_NAME
+#          toLayerArn=$(aws lambda publish-layer-version --layer-name ${{ github.event.inputs.toLayer }} --content S3Bucket=$BUCKET_NAME,S3Key=layer.zip --query 'LayerVersionArn' --output text)
+#          aws s3 rm s3://$BUCKET_NAME/layer.zip
+#          aws s3 rb s3://$BUCKET_NAME
+#          echo $toLayerArn
 
       - name: public layer
         env:
@@ -137,108 +141,108 @@ jobs:
           path: ${{ github.event.inputs.toLayer }}/${{matrix.region}}
           retention-days: 1
 
-  smoke-test:
-    needs: publish-layer
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Checkout submodules
-        run: |
-          git submodule update --init --recursive
-          cd opentelemetry-lambda
-          git fetch
-          git merge origin/master
-
-      - name: adot custom
-        run: |
-          cp -rf adot/* opentelemetry-lambda/
-
-      # set aws creds for CN regions and standard regions
-      - name: Configure AWS Credentials CN
-        uses: aws-actions/configure-aws-credentials@v1
-        if: ${{ matrix.region == 'cn-north-1' ||  matrix.region == 'cn-northwest-1'}}
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST_CN }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST_CN }}
-          mask-aws-account-id: false
-          aws-region: ${{matrix.region}}
-      - name: Configure AWS Credentials standard
-        uses: aws-actions/configure-aws-credentials@v1
-        if: ${{ matrix.region != 'cn-north-1' &&  matrix.region != 'cn-northwest-1'}}
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST }}
-          mask-aws-account-id: false
-          aws-region: ${{matrix.region}}
-
-      - name: Get git commit sha
-        run: |
-          echo "ADOT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-          cd opentelemetry-lambda
-          echo "OTEL_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-
-      - name: Set layer name
-        run: |
-          echo "OTEL_LAMBDA_LAYER=${{ github.event.inputs.toLayer }}" >> $GITHUB_ENV
-
-      - name: Checkout test framework
-        uses: actions/checkout@v2
-        if: ${{ success() }}
-        with:
-          repository: aws-observability/aws-otel-test-framework
-          path: test-framework
-
-      - name: Set sample stack name
-        run: |
-          echo "OTEL_LAMBDA_STACK=$STACK-$OTEL_SHA-$ADOT_SHA" >> $GITHUB_ENV
-
-      - name: deploy sample
-        continue-on-error: true
-        working-directory: opentelemetry-lambda/python/sample-python
-        run: |
-          echo $OTEL_LAMBDA_STACK
-          ./run.sh
-
-      - name: validate sample
-        run: |
-          echo "TODO"
-
-      - name: download layerARNs
-        uses: actions/download-artifact@v2
-        with:
-          name: ${{ github.event.inputs.toLayer }}
-          path: ${{ github.event.inputs.toLayer }}
-
-      - name: install otel layer to sample
-        run: |
-          layerArn=$(cat ${{ github.event.inputs.toLayer }}/$AWS_REGION)
-          echo $layerArn
-          ${{ env.UTILS }}/update.sh -l $layerArn
-          ${{ env.UTILS }}/update.sh -e "Variables={OPENTELEMETRY_COLLECTOR_CONFIG_FILE=/opt/collector-config/config.yaml,AWS_LAMBDA_EXEC_WRAPPER=/opt/python/otel-instrument}"
-
-      - name: validate layer
-        run: |
-          endpoint=$(${{ env.UTILS }}/endpoint.sh)
-          curl $endpoint
-          cp opentelemetry-lambda/python/sample-python/test/expected.mustache test-framework/validator/src/main/resources/expected-data-template/lambdaExpectedTrace.mustache
-          cd test-framework
-          ./gradlew :validator:run  --args="-c default-lambda-validation.yml --endpoint $endpoint --region $AWS_REGION"
-
-      - name: clean sample
-        run: |
-          ${{ env.UTILS }}/clean.sh
+#  smoke-test:
+#    needs: publish-layer
+#    runs-on: ubuntu-latest
+#
+#    strategy:
+#      matrix:
+#        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
+#
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v2
+#
+#      - name: Checkout submodules
+#        run: |
+#          git submodule update --init --recursive
+#          cd opentelemetry-lambda
+#          git fetch
+#          git merge origin/master
+#
+#      - name: adot custom
+#        run: |
+#          cp -rf adot/* opentelemetry-lambda/
+#
+#      # set aws creds for CN regions and standard regions
+#      - name: Configure AWS Credentials CN
+#        uses: aws-actions/configure-aws-credentials@v1
+#        if: ${{ matrix.region == 'cn-north-1' ||  matrix.region == 'cn-northwest-1'}}
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST_CN }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST_CN }}
+#          mask-aws-account-id: false
+#          aws-region: ${{matrix.region}}
+#      - name: Configure AWS Credentials standard
+#        uses: aws-actions/configure-aws-credentials@v1
+#        if: ${{ matrix.region != 'cn-north-1' &&  matrix.region != 'cn-northwest-1'}}
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST }}
+#          mask-aws-account-id: false
+#          aws-region: ${{matrix.region}}
+#
+#      - name: Get git commit sha
+#        run: |
+#          echo "ADOT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+#          cd opentelemetry-lambda
+#          echo "OTEL_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+#
+#      - name: Set layer name
+#        run: |
+#          echo "OTEL_LAMBDA_LAYER=${{ github.event.inputs.toLayer }}" >> $GITHUB_ENV
+#
+#      - name: Checkout test framework
+#        uses: actions/checkout@v2
+#        if: ${{ success() }}
+#        with:
+#          repository: aws-observability/aws-otel-test-framework
+#          path: test-framework
+#
+#      - name: Set sample stack name
+#        run: |
+#          echo "OTEL_LAMBDA_STACK=$STACK-$OTEL_SHA-$ADOT_SHA" >> $GITHUB_ENV
+#
+#      - name: deploy sample
+#        continue-on-error: true
+#        working-directory: opentelemetry-lambda/python/sample-python
+#        run: |
+#          echo $OTEL_LAMBDA_STACK
+#          ./run.sh
+#
+#      - name: validate sample
+#        run: |
+#          echo "TODO"
+#
+#      - name: download layerARNs
+#        uses: actions/download-artifact@v2
+#        with:
+#          name: ${{ github.event.inputs.toLayer }}
+#          path: ${{ github.event.inputs.toLayer }}
+#
+#      - name: install otel layer to sample
+#        run: |
+#          layerArn=$(cat ${{ github.event.inputs.toLayer }}/$AWS_REGION)
+#          echo $layerArn
+#          ${{ env.UTILS }}/update.sh -l $layerArn
+#          ${{ env.UTILS }}/update.sh -e "Variables={OPENTELEMETRY_COLLECTOR_CONFIG_FILE=/opt/collector-config/config.yaml,AWS_LAMBDA_EXEC_WRAPPER=/opt/python/otel-instrument}"
+#
+#      - name: validate layer
+#        run: |
+#          endpoint=$(${{ env.UTILS }}/endpoint.sh)
+#          curl $endpoint
+#          cp opentelemetry-lambda/python/sample-python/test/expected.mustache test-framework/validator/src/main/resources/expected-data-template/lambdaExpectedTrace.mustache
+#          cd test-framework
+#          ./gradlew :validator:run  --args="-c default-lambda-validation.yml --endpoint $endpoint --region $AWS_REGION"
+#
+#      - name: clean sample
+#        run: |
+#          ${{ env.UTILS }}/clean.sh
 
   release-to-github:
     runs-on: ubuntu-latest
-    needs: [ smoke-test ]
-#    needs: publish-layer
+#    needs: [ smoke-test ]
+    needs: publish-layer
     steps:
       - name: download layerARNs
         uses: actions/download-artifact@v2
