--- a/.github/workflows/soak.yml
+++ b/.github/workflows/soak.yml
@@ -18,7 +18,7 @@ on:
         required: true
         default: '600 5'
   schedule:
-    - cron: '0 0 * * *' # every day
+    - cron: '0 * * * *' # every day
 
 jobs:
   integration-test:
