--- a/.github/workflows/soak-py.yml
+++ b/.github/workflows/soak-py.yml
@@ -1,21 +1,24 @@
-name: integration-python
+name: soak-python
+
 env:
   LAYER: py38-layer
   LAYER_PATH: 'opentelemetry-lambda/python/src'
-  STACK: py38-sample
+  STACK: py38-soak
   UTILS: ${{ github.workspace }}/opentelemetry-lambda/utils/sam
 
 on:
   workflow_dispatch:
     inputs:
-      reserve:
-        description: 'reserve'
+      runtime:
+        description: 'soaking'
         required: false
-        default: 'reserve'
+        default: 'Python3.8'
+      args:
+        description: 'soaking test args'
+        required: true
+        default: '600 5'
   schedule:
-    - cron: '5 * * * *' # every hour
-  push:
-    branches: [ main ]
+    - cron: '0 * * * *' # every day
 
 jobs:
   integration-test:
@@ -23,7 +26,6 @@ jobs:
 
     strategy:
       matrix:
-#        region: [ us-west-2, cn-northwest-1 ]
         region: [ us-west-2 ]
 
     steps:
@@ -41,6 +43,7 @@ jobs:
         run: |
           cp -rf adot/* opentelemetry-lambda/
 
+      # set aws creds for CN regions and standard regions
       - name: Configure AWS Credentials CN
         uses: aws-actions/configure-aws-credentials@v1
         if: ${{ matrix.region == 'cn-north-1' ||  matrix.region == 'cn-northwest-1'}}
@@ -70,7 +73,7 @@ jobs:
 
       - name: deploy layer
         run: |
-          layerArn=$($UTILS/layer.sh -a)
+          layerArn=$(${{ env.UTILS }}/layer.sh -a)
           echo $layerArn
           if [[ $layerArn == "null" ]]; then
             echo "building and deploying layer"
@@ -79,7 +82,7 @@ jobs:
           else
             echo "skip deploy layer"
           fi
-          layerArn=$($UTILS/layer.sh -a)
+          layerArn=$(${{ env.UTILS }}/layer.sh -a)
           echo $layerArn
 
       - name: Checkout test framework
@@ -95,18 +98,14 @@ jobs:
 
       - name: deploy sample
         continue-on-error: true
-        working-directory: opentelemetry-lambda/python/sample-python
+        working-directory: opentelemetry-lambda/python/sample-xray
         run: |
           echo $OTEL_LAMBDA_STACK
           ./run.sh
 
       - name: validate sample
         run: |
-          endpoint=$(${{ env.UTILS }}/endpoint.sh)
-          curl $endpoint
-          cp opentelemetry-lambda/python/sample-python/test/expected.mustache test-framework/validator/src/main/resources/expected-data-template/lambdaExpectedTrace.mustache
-          cd test-framework
-          ./gradlew :validator:run  --args="-c default-lambda-validation.yml --endpoint $endpoint --region $AWS_REGION"
+          echo "TODO"
 
       - name: install otel layer to sample
         run: |
@@ -119,9 +118,35 @@ jobs:
         run: |
           endpoint=$(${{ env.UTILS }}/endpoint.sh)
           curl $endpoint
-          cp opentelemetry-lambda/python/sample-python/test/expected.mustache test-framework/validator/src/main/resources/expected-data-template/lambdaExpectedTrace.mustache
+          cp opentelemetry-lambda/python/sample-xray/test/expected.mustache test-framework/validator/src/main/resources/expected-data-template/lambdaExpectedTrace.mustache
           cd test-framework
           ./gradlew :validator:run  --args="-c default-lambda-validation.yml --endpoint $endpoint --region $AWS_REGION"
+
+      - name: Enable Lambda Insight
+        working-directory: ${{ env.UTILS }}
+        if: ${{ success() }}
+        run: |
+          ./update.sh -a "arn:aws:lambda:us-west-2:580247275435:layer:LambdaInsightsExtension:10"
+
+      - name: manually trigger soaking test
+        working-directory: ${{ env.UTILS }}
+        if: ${{ success() && github.event_name == 'workflow_dispatch' }}
+        run: |
+          pip install boto3
+          functionName=$(./function.sh)
+          endpoint=$(./endpoint.sh)
+          python3 ./soak.py $functionName ${{ github.event.inputs.args }} $endpoint
+          echo "Soaking test done."
+
+      - name: scheduled soaking test
+        working-directory: ${{ env.UTILS }}
+        if: ${{ success() && github.event_name != 'workflow_dispatch' }}
+        run: |
+          pip install boto3
+          functionName=$($UTILS/function.sh)
+          endpoint=$($UTILS/endpoint.sh)
+          python3 soak.py $functionName 18000 5 $endpoint
+          echo "Soaking test done."
 
       - name: clean sample
         run: |
