--- a/.github/workflows/release-py.yml
+++ b/.github/workflows/release-py.yml
@@ -147,6 +147,7 @@ jobs:
     strategy:
       matrix:
         region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
+#        region: [ us-east-1, us-east-2, us-west-1, us-west-2, eu-west-1, eu-west-2 ]
 
     steps:
       - name: Checkout repository
