--- a/.github/workflows/release-py.yml
+++ b/.github/workflows/release-py.yml
@@ -65,8 +65,8 @@ jobs:
 
     strategy:
       matrix:
-        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
-
+#        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
+        [ us-east-1, us-east-2, us-west-1, us-west-2, ap-south-1, ap-northeast-3, ap-northeast-2, ap-southeast-1, ap-southeast-2, ap-northeast-1, ca-central-1, eu-central-1, eu-west-1, eu-west-2, eu-west-3, eu-north-1, eu-south-1]
     env:
       AWS_REGION: ${{matrix.region}}
 
@@ -146,8 +146,10 @@ jobs:
 
     strategy:
       matrix:
-        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
-#        region: [ us-east-1, us-east-2, us-west-1, us-west-2, eu-west-1, eu-west-2 ]
+#        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
+#        region-cn: [ cn-northeast-1, cn-north-1 ]
+#        region-optin: [ af-south-1, ap-east-1, eu-south-1, me-south-1 ]
+        region: [ us-east-1, us-east-2, us-west-1, us-west-2, ap-south-1, ap-northeast-3, ap-northeast-2, ap-southeast-1, ap-southeast-2, ap-northeast-1, ca-central-1, eu-central-1, eu-west-1, eu-west-2, eu-west-3, eu-north-1, eu-south-1]
 
     steps:
       - name: Checkout repository
