--- a/.github/workflows/release-py.yml
+++ b/.github/workflows/release-py.yml
@@ -22,7 +22,7 @@ on:
       regions:
         description: 'regions to be deployed'
         retuired: true
-        default: '{region: [ us-east-1, us-east-2, us-west-1, us-west-2, ap-south-1, ap-northeast-3, ap-northeast-2, ap-southeast-1, ap-southeast-2, ap-northeast-1, ca-central-1, eu-central-1, eu-west-1, eu-west-2, eu-west-3, eu-north-1, eu-south-1]}'
+        default: {region: [ us-east-1, us-east-2, us-west-1, us-west-2, ap-south-1, ap-northeast-3, ap-northeast-2, ap-southeast-1, ap-southeast-2, ap-northeast-1, ca-central-1, eu-central-1, eu-west-1, eu-west-2, eu-west-3, eu-north-1, eu-south-1]}
 
 
 jobs:
@@ -68,10 +68,9 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      matrix:
+      matrix: ${{fromJson(github.event.inputs.regions)}}
 #        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
 #        region: [ us-east-1, us-east-2, us-west-1, us-west-2, ap-south-1, ap-northeast-3, ap-northeast-2, ap-southeast-1, ap-southeast-2, ap-northeast-1, ca-central-1, eu-central-1, eu-west-1, eu-west-2, eu-west-3, eu-north-1, eu-south-1]
-        ${{fromJson(github.event.inputs.regions)}}
     env:
       AWS_REGION: ${{matrix.region}}
 
