--- a/.github/workflows/release-py.yml
+++ b/.github/workflows/release-py.yml
@@ -68,9 +68,9 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      matrix:
-        ${{fromJson(github.event.inputs.regions)}}
-#        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
+      matrix: ${{fromJson(github.event.inputs.regions)}}
+#        region-cn: [ cn-northeast-1, cn-north-1 ]
+#        region-optin: [ af-south-1, ap-east-1, eu-south-1, me-south-1 ]
 #        region: [ us-east-1, us-east-2, us-west-1, us-west-2, ap-south-1, ap-northeast-3, ap-northeast-2, ap-southeast-1, ap-southeast-2, ap-northeast-1, ca-central-1, eu-central-1, eu-west-1, eu-west-2, eu-west-3, eu-north-1, sa-east-1]
     env:
       AWS_REGION: ${{matrix.region}}
@@ -150,11 +150,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      matrix:
-#        region: [ us-west-1, us-west-2, eu-west-1, eu-west-2 ]
-#        region-cn: [ cn-northeast-1, cn-north-1 ]
-#        region-optin: [ af-south-1, ap-east-1, eu-south-1, me-south-1 ]
-        region: [ us-east-1, us-east-2, us-west-1, us-west-2, ap-south-1, ap-northeast-3, ap-northeast-2, ap-southeast-1, ap-southeast-2, ap-northeast-1, ca-central-1, eu-central-1, eu-west-1, eu-west-2, eu-west-3, eu-north-1, sa-east-1]
+      matrix: ${{fromJson(github.event.inputs.regions)}}
 
     steps:
       - name: Checkout repository
