--- a/.github/workflows/release-py.yml
+++ b/.github/workflows/release-py.yml
@@ -26,90 +26,90 @@ on:
 
 
 jobs:
-#  cache-layer-from-test:
-#    runs-on: ubuntu-latest
-#
-#    env:
-#      KEY: ${{ github.event.inputs.fromLayer }}
-#      AWS_REGION: us-west-2
-#
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: adot custom
-#        run: |
-#          cp -rf adot/* opentelemetry-lambda/
-#
-#      - name: Configure AWS Credentials
-#        uses: aws-actions/configure-aws-credentials@v1
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST }}
-#          mask-aws-account-id: false
-#          aws-region: ${{ env.AWS_REGION }}
-#
-#      - name: Cache layer
-#        uses: actions/cache@v2
-#        id: cache-layer
-#        with:
-#          path: ./layer.zip
-#          key: ${{ github.event.inputs.fromLayer }}
-#
-#      - name: download layer
-#        env:
-#          OTEL_LAMBDA_LAYER: ${{ github.event.inputs.toLayer }}
-#        run: |
-#          layerArn=$($UTILS/layer.sh -a)
-#          URL=$(aws lambda get-layer-version-by-arn --arn $layerArn --query Content.Location --output text)
-#          curl $URL -o layer.zip
-#
-#  publish-layer:
-#    needs: cache-layer-from-test
-#
-#    runs-on: ubuntu-latest
-#
-#    strategy:
-#      matrix: ${{fromJson(github.event.inputs.regions)}}
-##        region-cn: [ cn-northeast-1, cn-north-1 ]
-##        region-optin: [ af-south-1, ap-east-1, eu-south-1, me-south-1 ]
-##        region: [ us-east-1, us-east-2, us-west-1, us-west-2, ap-south-1, ap-northeast-3, ap-northeast-2, ap-southeast-1, ap-southeast-2, ap-northeast-1, ca-central-1, eu-central-1, eu-west-1, eu-west-2, eu-west-3, eu-north-1, sa-east-1]
-#    env:
-#      AWS_REGION: ${{matrix.region}}
-#
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: adot custom
-#        run: |
-#          cp -rf adot/* opentelemetry-lambda/
-#
-#      - name: Configure AWS Credentials CN
-#        uses: aws-actions/configure-aws-credentials@v1
-#        if: ${{ matrix.region == 'cn-north-1' ||  matrix.region == 'cn-northwest-1'}}
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST_CN }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST_CN }}
-#          mask-aws-account-id: false
-#          aws-region: ${{matrix.region}}
-#      - name: Configure AWS Credentials standard
-#        uses: aws-actions/configure-aws-credentials@v1
-#        if: ${{ matrix.region != 'cn-north-1' &&  matrix.region != 'cn-northwest-1'}}
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
-#          mask-aws-account-id: false
-#          aws-region: ${{matrix.region}}
-#
-#      - name: Cache layer
-#        uses: actions/cache@v2
-#        id: cache-layer
-#        with:
-#          path: ./layer.zip
-#          key: ${{ github.event.inputs.fromLayer }}
-#
-#      - name: layer missing
-#        if: steps.cache-layer.outputs.cache-hit != 'true'
-#        run: |
-#          exit 1
-#
+  cache-layer-from-test:
+    runs-on: ubuntu-latest
+
+    env:
+      KEY: ${{ github.event.inputs.fromLayer }}
+      AWS_REGION: us-west-2
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: adot custom
+        run: |
+          cp -rf adot/* opentelemetry-lambda/
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST }}
+          mask-aws-account-id: false
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Cache layer
+        uses: actions/cache@v2
+        id: cache-layer
+        with:
+          path: ./layer.zip
+          key: ${{ github.event.inputs.fromLayer }}
+
+      - name: download layer
+        env:
+          OTEL_LAMBDA_LAYER: ${{ github.event.inputs.toLayer }}
+        run: |
+          layerArn=$($UTILS/layer.sh -a)
+          URL=$(aws lambda get-layer-version-by-arn --arn $layerArn --query Content.Location --output text)
+          curl $URL -o layer.zip
+
+  publish-layer:
+    needs: cache-layer-from-test
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix: ${{fromJson(github.event.inputs.regions)}}
+#        region-cn: [ cn-northeast-1, cn-north-1 ]
+#        region-optin: [ af-south-1, ap-east-1, eu-south-1, me-south-1 ]
+#        region: [ us-east-1, us-east-2, us-west-1, us-west-2, ap-south-1, ap-northeast-3, ap-northeast-2, ap-southeast-1, ap-southeast-2, ap-northeast-1, ca-central-1, eu-central-1, eu-west-1, eu-west-2, eu-west-3, eu-north-1, sa-east-1]
+    env:
+      AWS_REGION: ${{matrix.region}}
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: adot custom
+        run: |
+          cp -rf adot/* opentelemetry-lambda/
+
+      - name: Configure AWS Credentials CN
+        uses: aws-actions/configure-aws-credentials@v1
+        if: ${{ matrix.region == 'cn-north-1' ||  matrix.region == 'cn-northwest-1'}}
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST_CN }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST_CN }}
+          mask-aws-account-id: false
+          aws-region: ${{matrix.region}}
+      - name: Configure AWS Credentials standard
+        uses: aws-actions/configure-aws-credentials@v1
+        if: ${{ matrix.region != 'cn-north-1' &&  matrix.region != 'cn-northwest-1'}}
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+          mask-aws-account-id: false
+          aws-region: ${{matrix.region}}
+
+      - name: Cache layer
+        uses: actions/cache@v2
+        id: cache-layer
+        with:
+          path: ./layer.zip
+          key: ${{ github.event.inputs.fromLayer }}
+
+      - name: layer missing
+        if: steps.cache-layer.outputs.cache-hit != 'true'
+        run: |
+          exit 1
+
 #      - name: clone
 #        run: |
 #          BUCKET_NAME="lambda-artifacts"-$(dd if=/dev/random bs=8 count=1 2>/dev/null | od -An -tx1 | tr -d ' \t\n')
@@ -128,26 +128,26 @@ jobs:
 #          echo $layerVersion
 #          aws lambda add-layer-version-permission --layer-name ${{ github.event.inputs.toLayer }} --version-number $layerVersion --principal "*" --statement-id publish --action lambda:GetLayerVersion
 #          sleep 120
-#
-#      - name: get layerARN
-#        env:
-#          OTEL_LAMBDA_LAYER: ${{ github.event.inputs.toLayer }}
-#        if: ${{ success() }}
-#        run: |
-#          mkdir ${{ github.event.inputs.toLayer }}
-#          $UTILS/layer.sh -a > ${{ github.event.inputs.toLayer }}/$AWS_REGION
-#          cat ${{ github.event.inputs.toLayer }}/$AWS_REGION
-#
-#      - name: upload layer arn artifact
-#        if: ${{ success() }}
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: ${{ github.event.inputs.toLayer }}
-#          path: ${{ github.event.inputs.toLayer }}/${{matrix.region}}
-#          retention-days: 1
+
+      - name: get layerARN
+        env:
+          OTEL_LAMBDA_LAYER: ${{ github.event.inputs.toLayer }}
+        if: ${{ success() }}
+        run: |
+          mkdir ${{ github.event.inputs.toLayer }}
+          $UTILS/layer.sh -a > ${{ github.event.inputs.toLayer }}/$AWS_REGION
+          cat ${{ github.event.inputs.toLayer }}/$AWS_REGION
+
+      - name: upload layer arn artifact
+        if: ${{ success() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ github.event.inputs.toLayer }}
+          path: ${{ github.event.inputs.toLayer }}/${{matrix.region}}
+          retention-days: 15
 
   smoke-test:
-#    needs: publish-layer
+    needs: publish-layer
     runs-on: ubuntu-latest
 
     strategy:
@@ -245,7 +245,6 @@ jobs:
   release-to-github:
     runs-on: ubuntu-latest
     needs: [ smoke-test ]
-#    needs: publish-layer
     steps:
       - name: download layerARNs
         uses: actions/download-artifact@v2
