--- a/.github/workflows/release-py.yml
+++ b/.github/workflows/release-py.yml
@@ -121,12 +121,13 @@ jobs:
           echo $toLayerArn
 
       - name: public layer
+        continue-on-error: true
         env:
           OTEL_LAMBDA_LAYER: ${{ github.event.inputs.toLayer }}
         run: |
           layerVersion=$($UTILS/layer.sh -v)
           echo $layerVersion
-          aws lambda add-layer-version-permission --layer-name ${{ github.event.inputs.toLayer }} --version-number $layerVersion --principal "*" --statement-id publish --action lambda:GetLayerVersio
+          aws lambda add-layer-version-permission --layer-name ${{ github.event.inputs.toLayer }} --version-number $layerVersion --principal "*" --statement-id publish --action lambda:GetLayerVersion
 
       - name: get layerARN
         env:
