--- a/.github/workflows/clean-stacks.yml
+++ b/.github/workflows/clean-stacks.yml
@@ -33,8 +33,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         if: ${{ matrix.region != 'cn-north-1' &&  matrix.region != 'cn-northwest-1'}}
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TEST }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TEST }}
           mask-aws-account-id: false
           aws-region: ${{matrix.region}}
 
