--- a/.github/workflows/release-py.yml
+++ b/.github/workflows/release-py.yml
@@ -245,8 +245,7 @@ jobs:
 
   release-to-github:
     runs-on: ubuntu-latest
-#    needs: [ smoke-test ]
-    needs: [ publish-layer ]
+    needs: [ smoke-test ]
     steps:
       - name: download layerARNs
         uses: actions/download-artifact@v2
