--- a/.github/workflows/daemon-ci.yml
+++ b/.github/workflows/daemon-ci.yml
@@ -40,7 +40,7 @@ jobs:
           sleep 30
       - name: Send invalid request
         run: |
-          python3 ./integration/invalid_input.py
+          echo "This is my data" > /dev/udp/127.0.0.1/2000git 
 
       - name: Publish metrics on daemon startup
         if: ${{ always() }}
@@ -63,7 +63,7 @@ jobs:
 
       - name: Pull an image from docker hub
         id: pull-from-dockerhub
-        run: docker pull amazon/aws-xray-daemon:latest
+        run: docker pull amazon/aws-xray-daemon:3.3.0
 
       - name: Publish metric on pulling an image
         if: ${{ always() }}
@@ -75,7 +75,7 @@ jobs:
           fi
       - name: Run daemon image
         run: |
-          docker run --name xray-daemon amazon/aws-xray-daemon:latest -o -n us-west-2 &
+          docker run --name xray-daemon amazon/aws-xray-daemon:3.3.0 -o -n us-west-2 &
           sleep 30
 
       - name: Send invalid request 1
