--- a/.github/workflows/daemon-ci.yml
+++ b/.github/workflows/daemon-ci.yml
@@ -37,7 +37,7 @@ jobs:
           fi
       - name: Run daemon image
         run: |
-          docker run --name xray-daemon public.ecr.aws/xray/aws-xray-daemon:latest -o -n us-west-2 &
+          docker run -p 0.0.0.0:2000:2000/udp public.ecr.aws/xray/aws-xray-daemon:latest -o -l dev -n us-west-2 -b 0.0.0.0:2000 &
           sleep 30
       - name: Send invalid request
         run: |
@@ -80,7 +80,7 @@ jobs:
           fi
       - name: Run daemon image
         run: |
-          docker run -p 0.0.0.0:2000:2000/udp amazon/aws-xray-daemon:3.3.0 -o -l dev -n us-west-2 -b 0.0.0.0:2000
+          docker run -p 0.0.0.0:2000:2000/udp amazon/aws-xray-daemon:3.3.0 -o -l dev -n us-west-2 -b 0.0.0.0:2000 &
           sleep 30
 
       - name: Send invalid request 1
